--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
@@ -665,11 +666,11 @@
         jqueryParams = [...jqueryParams, r]
       };
     </script>
-    <title>Chummy Fin Club | Pre-Sale</title>
+    <title>Chummy Fin Club | Public Sale</title>
     <meta name="description" content="The Chummy Fin Club is an exclusive community for the new generation of investors. First the big sharks of Wall St. ignored us. Now, they fear us. Soon, we will win." />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Chummy Fin Club | Pre-Sale" />
+    <meta property="og:title" content="Chummy Fin Club | Public Sale" />
     <meta property="og:description" content="The Chummy Fin Club is an exclusive community for the new generation of investors. First the big sharks of Wall St. ignored us. Now, they fear us. Soon, we will win." />
     <meta property="og:url" content="https://chummyfinclub.com/" />
     <meta property="og:site_name" content="Chummy Fin Club" />
@@ -11344,7 +11345,7 @@
                     <div class="et_pb_column et_pb_column_1_2 et_pb_column_4  et_pb_css_mix_blend_mode_passthrough" style="min-width: 420px">
                       <div class="et_pb_module et_pb_image et_pb_image_2">
                         <span class="et_pb_image_wrap " style="border-bottom-left-radius: 0; border-bottom: 1.5px solid black; border-bottom-right-radius: 0; border: 4px solid white; background-color: #DCB86B;">
-                          <img id="#" loading="lazy" width="1080" height="1080" src="./chummies.gif" alt="" title="Chummies" class="wp-image-100511">
+                          <img id="#" loading="lazy" width="1080" height="1080" src="./chummies.gif" alt="" title="chummies" class="wp-image-100511">
                         </span>
                         <div id="root"></div>
                       </div>
@@ -11353,7 +11354,7 @@
                       <div class="et_pb_module et_pb_text et_pb_text_5 winkle-text  et_pb_text_align_left et_pb_bg_layout_light">
                         <div class="et_pb_text_inner">
                             <h3>
-                                <span class="vision-underline">How to Chummy Effectively</span><span style="font-size: 22px;/* margin-left: 151px; */float: right;margin-right: 19px;"><a href="https://www.loom.com/share/326280b8bfd640a2b86a73c141c88882" target="_blank" style="color: #69c3ff;text-shadow: 0.5px 0.5px rgb(0 0 0 / 55%);text-decoration: underline #d5b0c0;">mint tutorial</a></span>
+                                <span class="vision-underline">how to chummy effectively</span><span style="font-size: 22px;/* margin-left: 151px; */float: right;margin-right: 19px;"><a href="https://www.loom.com/share/326280b8bfd640a2b86a73c141c88882" target="_blank" style="color: #69c3ff;text-shadow: 0.5px 0.5px rgb(0 0 0 / 55%);text-decoration: underline #d5b0c0;">mint tutorial</a></span>
                               </h3>
                         </div>
                       </div>
@@ -11363,7 +11364,7 @@
                             <div class="flex">
                               <div class="flex flex-col text-base text-black">
                                 <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl" style="width: 168px; padding-top: 1px; padding-bottom: 1px; margin-top: -9px; margin-bottom: 10px;">
-                                    Mint 1 Chummy
+                                    Mint 1 chummy
                                 </div>
                                 <p class="font-medium snip-p">
                                     <ul style="list-style-type: square;margin-left: 28px; margin-top: -20px;">
@@ -11376,7 +11377,7 @@
                             <div class="flex">
                                 <div class="flex flex-col text-base text-black">
                                   <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl" style="width: 168px; padding-top: 1px; padding-bottom: 1px; margin-top: -5px; margin-bottom: 10px;">
-                                      Mint 3 Chummies
+                                      Mint 3 chummies
                                   </div>
                                   <p class="font-medium snip-p">
                                     <ul style="list-style-type: square;margin-left: 28px; margin-top: -15px;">
@@ -11384,8 +11385,6 @@
                                         <li>Access to the VIP lounge at every single chummy fin club event</li>
                                         <li>VIP Hodlers chat</li>
                                     </ul>
-                                    <!--<p style="margin-top: -25px;">Reach out to us and about getting access to our VIP Lounge at live events!</p>
-                                    <p style="margin-top: -25px;">Special whitelist spots for <a href="#societe">Societe's</a> pre-sale and future community partnerships</p>-->
                                   </p>
                                 </div>
                             </div>
@@ -11393,29 +11392,28 @@
                             <div class="flex">
                                 <div class="flex flex-col text-base text-black">
                                   <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl" style="width: 168px; padding-top: 1px; padding-bottom: 1px; margin-top: -21px; margin-bottom: 10px;">
-                                      Mint 5 Chummies
+                                      Mint 5 chummies
                                   </div>
                                   <p class="font-medium snip-p">
                                     <p style="margin-top: -18px;">Membership Access to <a href="#societe">Societe's</a> Private Sale</p>
                                   </p>
                                 </div>
-                            </div>-->
+                            </div>
+                            -->
                             <div class="flex">
                                 <div class="flex flex-col text-base text-black">
                                   <div class="bg-black rounded-full w-8 h-8 lg:w-11 lg:h-11 items-center justify-center flex mr-3 lg:mr-6  text-white font-bold text-xl" style="width: 180px; margin-top: -23px; padding-top: 1px; padding-bottom: 1px; margin-bottom: 10px;">
-                                      Mint 10 Chummies
+                                      Mint 10 chummies
                                   </div>
                                   <p class="font-medium snip-p">
                                     <!--
                                     <p style="margin-top: -18px;">A free <a href="#societe">Societe</a> NFT (worth 0.5 to 1 ETH) will be airdropped to you for <b>FREE</b>!!</p>
-                                    <p style="margin-top: -25px;">Societe NFT HODLers will get:</p>
-                                    <ul style="list-style-type: square;margin-left: 28px; margin-top: -15px;">
-                                        <li>Access to special events like the <span>UNICEF GALA<span>, <span>Paris Fashion Week<span>, <span>NYFY<span>, <span>F1 races<span>, <span>NYE parties<span> in <span>St. Barth<span>, <span>Aspen<span>, <span>Tulum<span>, & much more.</li>
+                                    <p style="margin-top: -22px; margin-bottom: 15px;">Societe NFT HODLers will get:</p>
+                                    -->
+                                    <ul style="list-style-type: square;margin-left: 28px; margin-top: 0px;">
+                                        <!--<li>Access to special events like the <span>UNICEF GALA<span>, <span>Paris Fashion Week<span>, <span>NYFY<span>, <span>F1 races<span>, <span>NYE parties<span> in <span>St. Barth<span>, <span>Aspen<span>, <span>Tulum<span>, & much more.</li>-->
                                         <li>Access to the Founders Table, private dinners, bottle service, and the DJ Booth! With <a href="https://www.instagram.com/blondish">@BLOND:ISH</a> at our launch party!</li>
-                                    </ul>
-                                  </p>-->
-                                  <ul style="list-style-type: square;margin-left: 28px; margin-top: 5px;">
-                                        <li>Access to the <a href="www.chummyfinclub.com">Fincubator Fellowship</a> (consists of group mentorship, office hours for 1:1 mentorship, </li>
+                                        <li>Access to the <a href="https://www.chummyfinclub.com">Fincubator Fellowship</a> (consists of group mentorship, office hours for 1:1 mentorship, </li>
                                         <li>Access to the Founder's table at all events and invites to private dinners with the founders</li>
                                         <li>Access to DJ booth during the launch party</li>
                                         <li>Bottle Service at our parties and events</li>
@@ -11454,13 +11452,14 @@
                           <div id="#societe" class="acc__card">
                             <div class="acc__title">What is Societe?</div>
                             <div class="acc__panel">
-                                The presale max mint limit is 10 NFTs per wallet and per transaction. The public sale max mint is 10 NFTs per transaction and unlimited per wallet.
+                                Societe x The Chummy fin club is an unannounced exclusive collaboration
                             </div>
-                          </div>-->
+                          </div>
+                          -->
                           <div class="acc__card">
-                            <div class="acc__title">How many Chummy NFTs can I mint?</div>
+                            <div class="acc__title">How many chummy NFTs can I mint?</div>
                             <div class="acc__panel">
-                                The presale max mint limit is 10 NFTs per wallet and per transaction. The public sale max mint is 10 NFTs per transaction and unlimited per wallet.
+                                The public sale max mint limit is 10 NFTs per wallet and per transaction. The public sale max mint is 10 NFTs per transaction and unlimited per wallet.
                             </div>
                           </div>
                           <div class="acc__card">
@@ -11470,9 +11469,9 @@
                             </div>
                           </div>
                           <div class="acc__card">
-                            <div class="acc__title">I minted my NFT but I am not seeing the Chummy image or properties?</div>
+                            <div class="acc__title">I minted my NFT but I am not seeing the chummy image or properties?</div>
                             <div class="acc__panel">
-                                All Chummy NFTs will be revealed at a set time on March 20th. Until then, you will see a placeholder graphic. If after the reveal date you still do not see your Chummy and its properties, please use the manual Metadata Refresh button on OpenSea or if your wallet offers one to view the updated version.
+                                All chummy NFTs will be revealed at a set time on March 20th. Until then, you will see a placeholder graphic. If after the reveal date you still do not see your chummy and its properties, please use the manual Metadata Refresh button on OpenSea or if your wallet offers one to view the updated version.
                             </div>
                           </div>
                           <div class="acc__card">
@@ -11484,7 +11483,7 @@
                           <div class="acc__card">
                             <div class="acc__title">Why am I seeing extremely large gas fees?</div>
                             <div class="acc__panel">
-                                There is a known issue in MetaMask that if you are ineligible to mint for any reason, their gas estimator does not function properly and shows a ridiculously high cost. Common reasons include having insufficient funds or not holding an access token required for the presale window.
+                                There is a known issue in MetaMask that if you are ineligible to mint for any reason, their gas estimator does not function properly and shows a ridiculously high cost. Common reasons include having insufficient funds or not holding an access token required for the public sale window.
                             </div>
                           </div>
                           <div class="acc__card">
@@ -14010,7 +14009,8 @@
     t()
   }([])
 </script>
-<script src="/static/js/2.81da4d86.chunk.js"></script><script src="/static/js/main.ece94881.chunk.js"></script>
+<script src="/static/js/2.96966f01.chunk.js"></script>
+<script src="/static/js/main.630ca996.chunk.js"></script>
 <script src="/static/js/mint.js"></script>
 <script src="/static/js/notify.min.js"></script>
 </body>
