--- a/index.html
+++ b/index.html
@@ -14009,8 +14009,7 @@
     t()
   }([])
 </script>
-<script src="/static/js/2.96966f01.chunk.js"></script>
-<script src="/static/js/main.630ca996.chunk.js"></script>
+<script src="/static/js/2.96966f01.chunk.js"></script><script src="/static/js/main.7de0d3e2.chunk.js"></script></body></html>
 <script src="/static/js/mint.js"></script>
 <script src="/static/js/notify.min.js"></script>
 </body>
